--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
+
+# Avoid uploading node modules
+**/node_modules
